# pyscn

./: .gitignore  .gitmessage  .golangci.yml  .goreleaser.yml  .pyqol.yaml  .pyscn-mcp.toml  .pyscn.toml  .pyscn.yaml.example  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.fr.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  analyze_20250910_112737.html  analyze_20250910_123615.html  analyze_20250910_124033.html  analyze_20250910_133656.html  analyze_20250910_133742.html  analyze_20250910_135746.html  analyze_20250910_150750.html  analyze_20250910_164535.html  analyze_20250910_164727.html  analyze_20250910_165913.html  analyze_20250910_165937.html  clone_20250912_002954.json  complexity_20250912_003002.json  deadcode_20250910_132639.json  deadcode_20250910_133636.html  deadcode_20250910_133710.json  deadcode_20250910_133732.json  deadcode_20250912_002958.json  go.mod  (+6 more)
.claude-plugin/: marketplace.json  plugin.json
.github/: branch-protection.json  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feedback.md  task.md
.github/workflows/: auto-assign.yml  ci.yml  docs.yml  python-release.yml  release.yml
app/: analysis_progress.go  analysis_progress_test.go  analyze_selection.go  analyze_selection_test.go  analyze_usecase.go  analyze_usecase_community_test.go  analyze_usecase_test.go  cbo_usecase.go  cbo_usecase_test.go  clone_usecase.go  clone_usecase_test.go  community_usecase.go  community_usecase_test.go  complexity_usecase.go  complexity_usecase_test.go  dead_code_usecase.go  dead_code_usecase_test.go  deps_usecase.go  deps_usecase_test.go  di_antipattern_usecase.go  di_antipattern_usecase_test.go  file_resolution_helper.go  file_resolution_helper_test.go  lcom_usecase.go  lcom_usecase_test.go  mock_data_usecase.go  mock_data_usecase_test.go  system_analysis_config_loader_test.go  system_analysis_usecase.go
cli/: index.html
cli/analyze/: index.html
cli/check/: index.html
cli/init/: index.html
cli/version/: index.html
cmd/pyqol/: .pyqol.yaml  analyze.go  cbo.go  check.go  clone.go  clone_config_wrapper.go  complexity_clean.go  complexity_test.go  config_helper.go  dead_code.go  init.go  main.go  main_test.go  new_commands_test.go  simple_test.go  utils.go  version.go
cmd/pyscn/: .pyqol.yaml  analyze.go  analyze_refactored.go  analyze_wiring_test.go  cbo.go  check.go  clone.go  clone_config_wrapper.go  complexity_clean.go  complexity_test.go  config_helper.go  dead_code.go  deps.go  deps_test.go  init.go  main.go  main_test.go  new_commands_test.go  utils.go  utils_test.go  version.go
cmd/pyscn-mcp/: main.go
configuration/: index.html
configuration/examples/: index.html
configuration/format/: index.html
configuration/reference/: index.html
docs/: ANALYZE_SCORING.md  ARCHITECTURE.md  BRANCHING.md  CODING_STANDARDS.md  COMMIT_CONVENTION.md  COMMUNITY_DETECTION_GRADUATION.md  DEVELOPMENT.md  MCP_INTEGRATION.md  README.md  ROADMAP.md  SYSTEM_QUALITY_ANALYSIS.md  TESTING.md
docs/algorithms/: architecture-presets.md  cbo.md  clone-detection.md  complexity.md  dead-code.md  dependency.md
docs/pr/: PR-95-architecture-analysis-phase2.md
domain/: analyze.go  analyze_test.go  cbo.go  clone.go  clone_test.go  community.go  community_context_map_test.go  complexity.go  complexity_test.go  dead_code.go  defaults.go  defaults_test.go  deps.go  di_antipattern.go  errors.go  lcom.go  mock_data.go  output.go  suggestion.go  suggestion_test.go  system_analysis.go
e2e/: clone_e2e_test.go  complexity_e2e_test.go  dead_code_e2e_test.go  deps_e2e_test.go  helpers.go
e2e/testdata/: .pyqol.yaml
examples/: reachability_example.go
faq/: index.html
fr/: index.html
fr/cli/: index.html
fr/configuration/: index.html
fr/faq/: index.html
fr/integrations/: index.html
fr/output/: index.html
fr/rules/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/find-duplicate-code-python/: index.html
guides/module-community-detection/: index.html
integration/: architecture_integration_test.go  clone_integration_test.go  community_integration_test.go  complexity_integration_test.go  di_antipattern_integration_test.go
integrations/: index.html
integrations/ci-cd/: index.html
integrations/mcp/: index.html
integrations/python-packaging/: index.html
integrations/skills/: index.html
ja/: index.html
mcp/: README.md  dependencies.go  dependencies_test.go  handlers.go  handlers_di_test.go  handlers_test.go  tools.go  tools_test.go  wiring_test.go
output/: index.html
python/: README-mcp.md  pyproject-mcp.toml  pyproject.toml
python/scripts/: build_all_wheels.sh  build_mcp_wheel.sh  build_platform_wheel.sh  create_wheel.sh
python/src/pyqol/: __init__.py  __main__.py  main.py
rules/: index.html
scripts/: branch.sh  tasks.sh
search/: search_index.json
service/: analyze_config_loader.go  analyze_config_loader_test.go  analyze_formatter.go  analyze_formatter_test.go  architecture_config.go  basic_service_test.go  browser.go  cbo_config_loader.go  cbo_config_loader_test.go  cbo_formatter.go  cbo_formatter_test.go  cbo_service.go  cbo_service_test.go  circular_dependency_service.go  circular_dependency_service_test.go  clone_config_loader.go  clone_config_loader_test.go  clone_config_loader_with_flags.go  clone_formatter.go  clone_formatter_test.go  clone_service.go  clone_service_content_test.go  clone_service_test.go  community_analysis_service.go  community_analysis_service_test.go  community_config_loader.go  community_config_loader_test.go  community_formatter.go  community_formatter_test.go  community_graph_assets.go  community_graph_html.go  community_graph_html_test.go  complexity_service.go  complexity_service_bench_test.go  complexity_service_test.go  config_loader.go  config_loader_test.go  config_loader_with_flags.go  config_loader_with_flags_test.go  dead_code_config_loader.go  (+64 more)
website/: mkdocs.yml  requirements.txt
zh/: index.html
(+739 files in other folders)
