[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscn"
dynamic = ["version"]
description = "An intelligent Python code quality analyzer with architectural guidance"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "DaisukeYoda", email = "daisukeyoda@users.noreply.github.com"}
]
maintainers = [
    {name = "DaisukeYoda", email = "daisukeyoda@users.noreply.github.com"}
]
keywords = [
    "python",
    "static-analysis",
    "code-quality",
    "complexity",
    "linter",
    "ast",
    "cfg",
    "dead-code"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "build>=0.7.0",
    "twine>=3.0.0",
]

[project.scripts]
pyscn = "pyscn.__main__:main"

[project.urls]
Homepage = "https://github.com/ludo-technologies/pyscn"
Documentation = "https://github.com/ludo-technologies/pyscn/tree/main/docs"
Repository = "https://github.com/ludo-technologies/pyscn"
Issues = "https://github.com/ludo-technologies/pyscn/issues"
Changelog = "https://github.com/ludo-technologies/pyscn/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["pyscn"]
package-dir = {"" = "python/src"}

[tool.setuptools.package-data]
pyscn = ["bin/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.py[co]", "__pycache__", "*.so", "*.pyd"]

[tool.setuptools_scm]
# Default configuration - gets version from git tags

[build]
exclude = [
    "*.pyc",
    "*.pyo", 
    "__pycache__",
    ".git",
    ".gitignore",
    "*.md",
    "tests/",
    "docs/"
]